--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -49,8 +49,7 @@
             </li>
             {% else %}
             <li class="nav-item">
-{#              <a class="nav-link" href="{% url "accounts:login" %}">Login</a>#}
-              <a class="nav-link" href="">Login</a>
+              <a class="nav-link" href="{% url "accounts:login" %}">Login</a>
             </li>
             {% endif %}
           </ul>
